# DailyArticleAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
config/: watch_profiles.yaml
front-end/: index.html  package-lock.json  package.json  vite.config.ts
front-end/src/: main.tsx  styles.css
front-end/template/: editorial-blog.tsx  template1.html
src/dailyarticleagent/: __init__.py  alerts.py  archive.py  classifier.py  cli.py  config.py  digest.py  llm.py  models.py  reader.py  service.py  sources.py  storage.py  text.py  web.py  worker.py
tests/: test_archive.py  test_classifier.py  test_cli.py  test_config.py  test_digest.py  test_llm.py  test_reader.py  test_runs.py  test_service_dates.py  test_service_rewrite.py  test_storage.py  test_web.py
