[project]
name = "daily-article-agent"
version = "0.1.0"
description = "Configurable research literature radar for daily and weekly scientific digests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pydantic>=2.8.0",
    "pypdf>=4.3.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "typer>=0.12.3",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
daily-article-agent = "dailyarticleagent.cli:app"
daa = "dailyarticleagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dailyarticleagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".agents",
    ".codex",
    ".trellis",
    "front-end/template",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
